ws_moveit/src/Diana7/include/DianaAPI.h

DIANA_API int runPath(/*IN*/ unsigned int id_path, /*IN*/ const char *strIpAddress = "");
DIANA_API int destroyPath(/*IN*/ unsigned int id_path, /*IN*/ const char *strIpAddress = "");
/*************************************** version 0.7 ***************************************/

DIANA_API int rpy2Axis(/*IN[3]*/ double *arr);
DIANA_API int axis2RPY(/*IN[3]*/ double *arr);
DIANA_API int homogeneous2Pose(/*IN[16]*/ double *matrix, /*OUT[6]*/ double *pose);
DIANA_API int pose2Homogeneous(/*IN[6]*/ double *pose, /*OUT[16]*/ double *matrix);
DIANA_API int enableTorqueReceiver(/*bool*/ bool bEnable, /*IN*/ const char *strIpAddress = "");
DIANA_API int sendTorque_rt(/*IN[7]*/ double *torque, /*IN*/ double t, /*IN*/ const char *strIpAddress = "");
/*************************************** version 0.8 ***************************************/

DIANA_API int enableCollisionDetection(bool bEnable, /*IN*/ const char *strIpAddress = "");
DIANA_API int setActiveTcpPayload(/*IN[10]*/ double *payload, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoJ(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int servoL(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                     /*IN*/ double scale, /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoJ_ex(/*IN[7]*/ double *joints, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                        /*IN*/ bool realiable, /*IN*/ const char *strIpAddress = "");
DIANA_API int servoL_ex(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                        /*IN*/ double scale, /*IN*/ bool realiable, /*IN[6]*/ double *active_tcp = nullptr,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int speedJ_ex(/*IN[7]*/ double *speed, /*IN*/ double a, /*option*/ double t, /*IN*/ bool realiable,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int speedL_ex(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t, /*IN*/ bool realiable,
                        /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
/*************************************** version 0.9 ***************************************/

DIANA_API int dumpToUDisk(const char *strIpAddress = "");
DIANA_API int inverse_ext(/*IN[7]*/ double *ref_joints, /*IN[6]*/ double *pose, /*OUT[7]*/ double *joints,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointLinkPos(/*OUT[7]*/ double *joints, /*IN*/ const char *strIpAddress = "");
DIANA_API int createComplexPath(/*IN*/ int complex_path_type, /*OUT*/ unsigned int &complex_path_id,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveLByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *target_joints, /*IN*/ double vel,
                               /*IN*/ double acc, /*IN*/ double blendradius, /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveLByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *target_pose, /*IN*/ double vel,
                             /*IN*/ double acc, /*IN*/ double blendradius, /*IN*/ const char *strIpAddress = "");